unpackaged/main/default/objects/B2CCRMSyncDefaults__mdt/B2CCRMSyncDefaults__mdt.object-meta.xml
<CustomObject>
    <description>Storing B2C CRM Sync static data in this metadata to populate in contact staging and contacts</description>
    <label>B2C Sync Default</label>
    <pluralLabel>B2C Sync Defaults</pluralLabel>
</CustomObject>