unpackaged/main/default/objects/B2CCRMSyncDefaults__mdt/fields/B2C_CustomerList__c.field-meta.xml
<CustomField>
    <fullName>B2C_CustomerList__c</fullName>
    <label>CustomerList</label>
    <length>100</length>
    <type>Text</type>
</CustomField>