unpackaged/main/default/objects/B2CCRMSyncDefaults__mdt/fields/B2C_Instance__c.field-meta.xml
<CustomField>
    <fullName>B2C_Instance__c</fullName>
    <label>B2C Instance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>