unpackaged/main/default/objects/B2CCRMSyncDefaults__mdt/fields/B2C_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>B2C_Integration_Status__c</fullName>
    <label>B2C Integration Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>